tests/files/lexer_tests/should_fail/007.cmdr
// Illegal character in string (ascii 7)
var = ''